--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
     <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <script src="script.js" defer></script>
     <meta charset="UTF-8">
+    <title>Grid of Squares</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <h1>
-      THE TITLE OF YOUR WEBPAGE
-    </h1>
-    <div id="container"></div>
+    <div class="container" id="grid-container"></div>
+    <script src="script.js"></script>
   </body>
 </html>
